...
                                                <color key="backgroundColor" red="1" green="0.38823529410000002" blue="0.1058823529" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                <state key="normal" title="Available Snacks">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                                <color key="backgroundColor" red="0.40000000000000002" green="0.92549019610000005" blue="0.52941176469999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <segments>
                                                    <segment title="Employee"/>
                                                    <segment title="Organization"/>
                                                </segments>
                                                <color key="selectedSegmentTintColor" red="0.40000000000000002" green="0.92549019610000005" blue="0.52941176469999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                <color key="backgroundColor" red="0.40000000000000002" green="0.92549019610000005" blue="0.52941176469999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <segments>
                                                    <segment title="Sign Up"/>
                                                    <segment title="Log In"/>
                                                </segments>
                                                <color key="selectedSegmentTintColor" red="0.40000000000000002" green="0.92549019610000005" blue="0.52941176469999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        <rect key="frame" x="16" y="16" width="352" height="370"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7wt-SZ-o4L">
                                                <rect key="frame" x="0.0" y="0.0" width="352" height="34"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JdM-jb-UQq">
                                                <rect key="frame" x="0.0" y="42" width="352" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="passwordTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Full Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zcS-kV-QLx">
                                                <rect key="frame" x="0.0" y="84" width="352" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="fullNameTextField"/>
...
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P7T-zo-4Ad">
                                                <rect key="frame" x="0.0" y="126" width="352" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="emailTextField"/>
...
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jCU-VD-2Rz">
                                                <rect key="frame" x="0.0" y="168" width="352" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="phoneNumTextField"/>
...
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Street Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2yW-D6-CC6">
                                                <rect key="frame" x="0.0" y="210" width="352" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="addressTextField"/>
...
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="State" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="r4U-QB-sTQ">
                                                <rect key="frame" x="0.0" y="252" width="352" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="stateTextField"/>
...
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Zipcode" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tsu-6e-rvK">
                                                <rect key="frame" x="0.0" y="294" width="352" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="zipcodeTextField"/>
...
                        <outlet property="roleSegmentedControl" destination="gzL-IV-lBK" id="qdf-6q-lbx"/>
