...
                } else {
                    NSLog("Error signing up: \(error)")
                    self.showNetworkFailAlert(withAuthType: .signUp, error: .otherError)
                }
                return
            }
            let alert = UIAlertController(title: "Sign Up Successful!",
                                          message: "Please log in",
                                          preferredStyle: .alert)
            
            let okAction = UIAlertAction(title: "OK", style: .default, handler: nil)
            
            alert.addAction(okAction)
            
            DispatchQueue.main.async {
                self.present(alert, animated: true) {
                    self.authType = .logIn
...
